--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     
+    <link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css">
+
     <link href="https://fonts.googleapis.com/css?family=Raleway:200&display=swap" rel="stylesheet"> 
     <!--
       manifest.json provides metadata used when your web app is installed on a
