--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="//cdn.quilljs.com/1.2.6/quill.snow.css">
 
     <link href="https://fonts.googleapis.com/css?family=Raleway:200&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Eczar:wght@600&display=swap" rel="stylesheet">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
